--- a/ru/index.html
+++ b/ru/index.html
@@ -24,7 +24,7 @@
 
   <!-- Custom styles for this template -->
   <link href="../css/carousel.css" rel="stylesheet">
-  <link href="../css/walkbrook.css" rel="stylesheet">
+  <link href="../css/meliota.css" rel="stylesheet">
 </head>
 <!-- NAVBAR
 ================================================== -->
