--- a/ru/index.html
+++ b/ru/index.html
@@ -24,7 +24,7 @@
 
   <!-- Custom styles for this template -->
   <link href="../css/carousel.css" rel="stylesheet">
-  <link href="../css/meliota.css" rel="stylesheet">
+  <link href="../css/walkbrook.css" rel="stylesheet">
 </head>
 <!-- NAVBAR
 ================================================== -->
@@ -40,7 +40,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="logo" rel="home" href="#" title="High-quality second-hand clothes">
-          <img style="" src="/img/meliota-logo.png">
+          <img style="" src="/img/logo.png">
         </a>
         <a class="navbar-brand" href="#">Walkbrook properties Limitada</a>
       </div>
@@ -189,12 +189,11 @@
           	   </address>
             <br>
             <br>
-			<div class="col-md-6">
-  				<img src="/img/map.png">
-            </div>
           </div>
           <div class="col-md-6">
-            <div id="map"></div>
+			  <div class="col-md-6">
+				  <img src="/img/map.png">
+			  </div>
           </div>
         </div>
       </div>
