--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="Meryan Stark">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
   <link rel="shortcut icon" href="/favicon.png" type="image/png">
   <link rel="icon" href="/favicon.png" type="image/png">
@@ -30,32 +29,7 @@
 ================================================== -->
 
 <body>
-	<header>
-		<div class="top-header">
-	        <div class="container">
-	            <div class="row">
-	                <div class="col-lg-12">
-	                    <ul class="list-inline text-lg-right text-center">
-	                        <li class="list-inline-item">
-	                            Location: 2135 10th Avenue, San Jose city, San Jose,
-	info@companyname.com
-	                        </li>
-	                        <li class="list-inline-item">
-	                            <a href="callto:3102704857">Call Us Now Costa Rica:
-	                                <span class="ml-2">3-102-704857</span>
-	                            </a>
-	                        </li>
-	                        <li class="list-inline-item">
-	                            <a href="#" id="searchOpen">
-	                                <i class="ti-search"></i>
-	                            </a>
-	                        </li>
-	                    </ul>
-	                </div>
-	            </div>
-	        </div>
-	    </div>
-	</header>
+
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
@@ -136,10 +110,6 @@
     </a>
   </div>
 
-  <div class="col-lg-12 text-center">
-    <h2 class="section-heading">High-quality second-hand clothes</h2><br>
-    <!-- <h3 class="section-subheading text-muted">Please let us know your requirements and we will try our utmost to ensure we meet your demands.&nbsp; To discuss prices, to visit us or for further enquiries.</h3> -->
-  </div>
   <!-- Marketing messaging and featurettes
     ================================================== -->
   <!-- Wrap the rest of the page in another container to center all the content. -->
@@ -148,7 +118,7 @@
     <section id="about">
       <div class="container">
         <div class="page-header">
-          <h1>About Us</h1>
+		  <h2 class="section-heading text-center">High-quality second-hand clothes</h2><br>
         </div>
         <div class="row">
           <p class="lead">
