--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
   <title>Walkbrook properties Limitada</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="../css/bootstrap.min.css" rel="stylesheet">
+  <link href="./css/bootstrap.min.css" rel="stylesheet">
 
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <link href="../css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+  <link href="./css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="../css/carousel.css" rel="stylesheet">
-  <link href="../css/walkbrook.css" rel="stylesheet">
+  <link href="./css/carousel.css" rel="stylesheet">
+  <link href="./css/walkbrook.css" rel="stylesheet">
 </head>
 <!-- NAVBAR
 ================================================== -->
 
 <body>
+
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
@@ -45,17 +46,18 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li><a class="page-scroll" href="#about">О Нас</a></li>
-          <li><a class="page-scroll" href="#terms">Гонорар</a></li>
-          <li><a class="page-scroll" href="#gallery">Галерея продукции</a></li>
-          <li><a class="page-scroll" href="#contact">Контакты</a></li>
+          <li><a class="page-scroll" href="#about">About us</a></li>
+          <li><a class="page-scroll" href="#terms">Terms</a></li>
+          <li><a class="page-scroll" href="#gallery">Gallery of products</a></li>
+          <li><a class="page-scroll" href="#contact">Contact</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Language <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li class="active"><a href="/ru.html">Русский <span class="sr-only">(current)</span></a></li>
-              <li class=""><a href="/">English <span class="sr-only"></span></a></li>
+              <li class="active"><a href="#">English <span class="sr-only">(current)</span></a></li>
+              <li class=""><a href="ru/">Русский <span class="sr-only"></span></a></li>
+
             </ul>
           </li>
         </ul>
@@ -74,7 +76,7 @@
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img class="first-slide" src="/img/slider/1.jpg" alt="First slide">
+        <img class="first-slide" src="img/slider/1.jpg" alt="First slide">
         <div class="container">
           <!-- <div class="carousel-caption">
                   <h1>Example headline.</h1>
@@ -84,13 +86,14 @@
         </div>
       </div>
       <div class="item">
-        <img class="second-slide" src="/img/slider/2.jpg" alt="Second slide">
+        <img class="second-slide" src="img/slider/2.jpg" alt="Second slide">
         <div class="container">
 
         </div>
       </div>
+
       <div class="item">
-        <img class="third-slide" src="/img/slider/3.jpg" alt="Third slide">
+        <img class="third-slide" src="img/slider/3.jpg" alt="Third slide">
         <div class="container">
 
         </div>
@@ -103,9 +106,10 @@
     </a>
     <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Следующая</span>
+      <span class="sr-only">Next</span>
     </a>
   </div>
+
   <!-- Marketing messaging and featurettes
     ================================================== -->
   <!-- Wrap the rest of the page in another container to center all the content. -->
@@ -113,12 +117,14 @@
   <div class="container">
     <section id="about">
       <div class="container">
-		  <div class="page-header">
-  		  	<h2 class="section-heading text-center">Высококачественная подержанная одежда</h2><br>
-          </div>
+        <div class="page-header">
+		  <h2 class="section-heading text-center">High-quality second-hand clothes</h2><br>
+        </div>
         <div class="row">
           <p class="lead">
-            Наша молодая, динамично развивающаяся компания, работая вместе с партнерами, снабжает новую и второго использования одежду и обувь, что имеет хорошое качество, для наших клиентов. Мы приветствуем все компании, большие или малые из любой части мира, чтобы строить надежные партнерские отношения. Мы посвящаем себя искать клиентов  вокруг нашей планете и предлагать продукты   <b>Walkbrook properties Limitada</b>  для сообществ и компаний, где наша вторичная одежда может начать новую жизнь и сделать хорошее восприятие для людей. Если вы чувствуете, что мы можем помочь вашей организации, пожалуйста, не стесняйтесь обращаться к нам.
+            Our young dynamic company, working together with partners to supply good quality new and second hand clothes and foot ware for our customers. We welcome every company, big or small from any parts of the world to build reliable partnership. We dedicate
+            ourselves to search nations around our planets and offer
+            <b>Walkbrook properties Limitada</b> products for communities and companies, where our recycled clothes can start a new life and make good perception for people. If you feel that we can help your organization please feel free to contact us.
           </p>
         </div>
       </div>
@@ -127,15 +133,17 @@
     <section id="terms">
       <div class="container">
         <div class="page-header">
-          <h1>Гонорар</h1>
+          <h1>Terms</h1>
         </div>
         <div class="row">
           <p class="lead">
-            <i>Оплата</i>: 30% депозита требуется для подтверждения заказа, окончательная оплата 70% должна быть выплачена до погрузки. Окончательный баланс будет изменяться в зависимости от списка упаковки.
-            Цены указано EXW (Ex Works), CPT. Все продажи являются окончательными. Мы принимаем банковский перевод или наличные деньги.<br><br>
-            <i>Заказы</i>: Количество минимального заказа составляет 20 000 кг. Мы не позволяем клиентам выбирать там свои товары лично.
-            Вы можете прийти и посмотреть товар. Просмотров только по предварительной записи.<br><br>
-            <i>Транспорт</i> :по желанию покупателя мы можем обеспечить транспортную поддержку.
+            <i>Payments</i>: 30% deposit is required to confirm your order, final 70% to be paid before loading. Final balance will vary depending on packing list. Prices are EXW (Ex Works), CPT. All sales are final. We accept bank transfer or cash.
+            <br>
+            <br>
+            <i>Orders</i>: The minimum order quantity is 20 000kg .We do not allow customers to select there own goods in person. You are welcome to come and view the goods. Viewings by appointment only.
+            <br>
+            <br>
+            <i>Transportation</i>: by request of the buyer we can provide a transport support.
           </p>
         </div>
       </div>
@@ -144,18 +152,17 @@
     <section id="gallery">
       <div class="container">
         <div class="page-header">
-          <h1>Галерея продукции</h1>
+          <h1>Gallery of products</h1>
         </div>
         <div class="row">
           <p class="lead">
-            Мы можем предложить несортированную и отсортированную одежду, чтобы удовлетворить все потребности клиентов.</p>            <h3>Несортированная одежда</h3>
-            <p class="lead">Хороший ассортимент вторичной одежды из благотворительных учреждений, школьных и корпоративных коллекций предоставляется каждому клиенту  популярными стильными европейскими брендами.
-              Оригинальные нераспечатанные сумки, где коллекция содержит одежду для дам, детей, мужчин. Сумки могут также содержать обувь, сумки, аксессуары, постельное белье, игрушки и домашний текстиль.</p>
-            <h3>Отсортированная одежда</h3>
-            <p class="lead">Сортировка производится по одной из наших компаний-партнеров на очень высоком уровне.
-               Мы можем предложить коллекции лета и зимой.
-               Одежда имеют категории, как: шорты, рубашки, джинсы, брюки, дамы нижнее белье, юбки, детская одежда, блузки...</p>
+            We can offer unsorted and sorted clothes to suit every customer needs.</p>
+            <h3>Unsorted</h3>
+            <p class="lead">A good range of recycled clothes from charities, school and company collections provide every customer with popular stylish European brands. Original unopened collection bag contain clothes for ladies, children, men. Bags also can contain
+            shoes, handbags, accessories, beddings, toys and home textiles.</p>
             <br>
+            <h3>Sorted</h3>
+            <p class="lead">Sorting is done by one of our partner companies to a very high standard. We can offer summer and winter selection. Clothes have categories as the following: shorts, shirts, jeans, trousers, ladies underwear, skirts, children clothes, blouses...</p>
           </p>
         </div>
       </div>
@@ -164,42 +171,40 @@
     <section id="contact">
       <div class="container">
         <div class="page-header">
-          <h1>Котакти</h1>
+          <h1>Contact Us</h1>
         </div>
         <div class="row">
           <div class="col-md-6">
-			  <address>
-                <strong>Walkbrook properties Limitada</strong><br>
-  			  Номер 3-102-704857 Коста Рика<br>
-  			  2135 10th Avenue, San Jose city, San Jose, <br>
-  			  Costa Rica<br><br>
-                BANK<br>
-      					S.W.I.F.T.: <b>AIZK LV22</b><br>
-      					ABLV Bank, AS<br>
-      					Elizabetes 23,  Riga, LV-1010, Latvia<br>
-      					IBAN: LV88AIZK0000010406586 <br>
-  						Директор Ruth Neidhart<br>
-          	   </address>
+            <address>
+              <strong>Walkbrook properties Limitada</strong><br>
+			  Company Number 3-102-704857 in Costa Rica<br>
+			  2135 10th Avenue, San Jose city, San Jose, <br>
+			  Costa Rica<br><br>
+              BANK<br>
+    					S.W.I.F.T.: <b>AIZK LV22</b><br>
+    					ABLV Bank, AS<br>
+    					Elizabetes 23,  Riga, LV-1010, Latvia<br>
+    					IBAN: LV88AIZK0000010406586 <br>
+						Director  Ruth Neidhart<br>
+        	   </address>
             <br>
             <br>
           </div>
           <div class="col-md-6">
-			  <div class="col-md-6">
-				  <img src="/img/map.png">
-			  </div>
+			<img src="/img/map.png">
           </div>
         </div>
       </div>
     </section>
 
     <hr>
-
     <!-- /END THE FEATURETTES -->
 
     <!-- FOOTER -->
     <footer>
-      <p class="pull-right"><a class="meliota-primary-color" href="#">^ Наверх</a></p>
-      <p>Walkbrook properties Limitada © <script>document.write(new Date().getFullYear())</script></p>
+      <p class="pull-right"><a class="walkbrook-primary-color" href="#">^ Back to top</a></p>
+      <p>Walkbrook properties Limitada © <script>document.write(new Date().getFullYear())</script>
+</p>
     </footer>
 
   </div>
@@ -208,14 +213,16 @@
   <!-- Bootstrap core JavaScript
     ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script src="/js/jquery.min.js"></script>
+  <script src="./js/jquery.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-  <script src="/js/classie.js"></script>
-  <script src="/js/bootstrap.min.js"></script>
-  <script src="/js/walkbrook.min.js"></script>
+  <script src="./js/classie.js"></script>
+  <script src="./js/bootstrap.min.js"></script>
+  <script src="js/cbpAnimatedHeader.js"></script>
+
+  <script src="./js/walkbrook.min.js"></script>
 
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <script src="/js/ie10-viewport-bug-workaround.js"></script>
+  <script src="./js/ie10-viewport-bug-workaround.js"></script>
 
 </body>
 
