--- a/ru/index.html
+++ b/ru/index.html
@@ -9,7 +9,6 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="Meryan Stark">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
   <link rel="shortcut icon" href="/favicon.png" type="image/png">
   <link rel="icon" href="/favicon.png" type="image/png">
@@ -107,12 +106,6 @@
       <span class="sr-only">Следующая</span>
     </a>
   </div>
-
-  <div class="col-lg-12 text-center">
-    <h2 class="section-heading">Высококачественная подержанная одежда</h2>
-    <br>
-    <!-- <h3 class="section-subheading text-muted">Please let us know your requirements and we will try our utmost to ensure we meet your demands.&nbsp; To discuss prices, to visit us or for further enquiries.</h3> -->
-  </div>
   <!-- Marketing messaging and featurettes
     ================================================== -->
   <!-- Wrap the rest of the page in another container to center all the content. -->
@@ -120,9 +113,9 @@
   <div class="container">
     <section id="about">
       <div class="container">
-        <div class="page-header">
-          <h1>О компании</h1>
-        </div>
+		  <div class="page-header">
+  		  	<h2 class="section-heading text-center">Высококачественная подержанная одежда</h2><br>
+          </div>
         <div class="row">
           <p class="lead">
             Наша молодая, динамично развивающаяся компания, работая вместе с партнерами, снабжает новую и второго использования одежду и обувь, что имеет хорошое качество, для наших клиентов. Мы приветствуем все компании, большие или малые из любой части мира, чтобы строить надежные партнерские отношения. Мы посвящаем себя искать клиентов  вокруг нашей планете и предлагать продукты   <b>Walkbrook properties Limitada</b>  для сообществ и компаний, где наша вторичная одежда может начать новую жизнь и сделать хорошее восприятие для людей. Если вы чувствуете, что мы можем помочь вашей организации, пожалуйста, не стесняйтесь обращаться к нам.
@@ -218,9 +211,8 @@
   <script src="/js/jquery.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
   <script src="/js/classie.js"></script>
-  <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
   <script src="/js/bootstrap.min.js"></script>
-  <script src="/js/meliota.min.js"></script>
+  <script src="/js/walkbrook.min.js"></script>
 
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="/js/ie10-viewport-bug-workaround.js"></script>
