--- a/ru/index.html
+++ b/ru/index.html
@@ -54,7 +54,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Language <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li class="active"><a href="/ru.html">Русский <span class="sr-only">(current)</span></a></li>
+              <li class="active"><a href="/ru/">Русский <span class="sr-only">(current)</span></a></li>
               <li class=""><a href="/">English <span class="sr-only"></span></a></li>
             </ul>
           </li>
