--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="Meryan Stark">
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
   <link rel="shortcut icon" href="/favicon.png" type="image/png">
   <link rel="icon" href="/favicon.png" type="image/png">
 
@@ -47,7 +46,6 @@
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li><a class="page-scroll" href="#about">About us</a></li>
-          <li><a class="page-scroll" href="#terms">Terms</a></li>
           <li><a class="page-scroll" href="#gallery">Gallery of products</a></li>
           <li><a class="page-scroll" href="#contact">Contact</a></li>
         </ul>
@@ -130,25 +128,6 @@
       </div>
     </section>
 
-    <section id="terms">
-      <div class="container">
-        <div class="page-header">
-          <h1>Terms</h1>
-        </div>
-        <div class="row">
-          <p class="lead">
-            <i>Payments</i>: 30% deposit is required to confirm your order, final 70% to be paid before loading. Final balance will vary depending on packing list. Prices are EXW (Ex Works), CPT. All sales are final. We accept bank transfer or cash.
-            <br>
-            <br>
-            <i>Orders</i>: The minimum order quantity is 20 000kg .We do not allow customers to select there own goods in person. You are welcome to come and view the goods. Viewings by appointment only.
-            <br>
-            <br>
-            <i>Transportation</i>: by request of the buyer we can provide a transport support.
-          </p>
-        </div>
-      </div>
-    </section>
-
     <section id="gallery">
       <div class="container">
         <div class="page-header">
@@ -180,18 +159,8 @@
 			  Company Number 3-102-704857 in Costa Rica<br>
 			  2135 10th Avenue, San Jose city, San Jose, <br>
 			  Costa Rica<br><br>
-              BANK<br>
-    					S.W.I.F.T.: <b>AIZK LV22</b><br>
-    					ABLV Bank, AS<br>
-    					Elizabetes 23,  Riga, LV-1010, Latvia<br>
-    					IBAN: LV88AIZK0000010406586 <br>
-						Director  Ruth Neidhart<br>
-        	   </address>
-            <br>
-            <br>
-          </div>
-          <div class="col-md-6">
-			<img src="/img/map.png">
+		<a href="mailto:walkbrookpropertiesltd@gmail.com?Subject=Question%20from%20website">walkbrookpropertiesltd@gmail.com</a>
+            </address>
           </div>
         </div>
       </div>
