--- a/ru/index.html
+++ b/ru/index.html
@@ -9,7 +9,6 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="Meryan Stark">
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
   <link rel="shortcut icon" href="/favicon.png" type="image/png">
   <link rel="icon" href="/favicon.png" type="image/png">
 
@@ -46,7 +45,6 @@
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li><a class="page-scroll" href="#about">О Нас</a></li>
-          <li><a class="page-scroll" href="#terms">Гонорар</a></li>
           <li><a class="page-scroll" href="#gallery">Галерея продукции</a></li>
           <li><a class="page-scroll" href="#contact">Контакты</a></li>
         </ul>
@@ -124,23 +122,6 @@
       </div>
     </section>
 
-    <section id="terms">
-      <div class="container">
-        <div class="page-header">
-          <h1>Гонорар</h1>
-        </div>
-        <div class="row">
-          <p class="lead">
-            <i>Оплата</i>: 30% депозита требуется для подтверждения заказа, окончательная оплата 70% должна быть выплачена до погрузки. Окончательный баланс будет изменяться в зависимости от списка упаковки.
-            Цены указано EXW (Ex Works), CPT. Все продажи являются окончательными. Мы принимаем банковский перевод или наличные деньги.<br><br>
-            <i>Заказы</i>: Количество минимального заказа составляет 20 000 кг. Мы не позволяем клиентам выбирать там свои товары лично.
-            Вы можете прийти и посмотреть товар. Просмотров только по предварительной записи.<br><br>
-            <i>Транспорт</i> :по желанию покупателя мы можем обеспечить транспортную поддержку.
-          </p>
-        </div>
-      </div>
-    </section>
-
     <section id="gallery">
       <div class="container">
         <div class="page-header">
@@ -168,26 +149,17 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-			  <address>
-                <strong>Walkbrook properties Limitada</strong><br>
+		<address>
+                	<strong>Walkbrook properties Limitada</strong><br>
   			  Номер 3-102-704857 Коста Рика<br>
   			  2135 10th Avenue, San Jose city, San Jose, <br>
   			  Costa Rica<br><br>
-                BANK<br>
-      					S.W.I.F.T.: <b>AIZK LV22</b><br>
-      					ABLV Bank, AS<br>
-      					Elizabetes 23,  Riga, LV-1010, Latvia<br>
-      					IBAN: LV88AIZK0000010406586 <br>
-  						Директор Ruth Neidhart<br>
-          	   </address>
+		Напишите нам на почту: <a href="mailto:walkbrookpropertiesltd@gmail.com?Subject=Вопрос%20с%20сайта">walkbrookpropertiesltd@gmail.com</a>
+              	</address>
             <br>
             <br>
           </div>
-          <div class="col-md-6">
-			  <div class="col-md-6">
-				  <img src="/img/map.png">
-			  </div>
-          </div>
+
         </div>
       </div>
     </section>
@@ -198,7 +170,7 @@
 
     <!-- FOOTER -->
     <footer>
-      <p class="pull-right"><a class="meliota-primary-color" href="#">^ Наверх</a></p>
+      <p class="pull-right"><a class="walkbrook-primary-color" href="#">^ Наверх</a></p>
       <p>Walkbrook properties Limitada © <script>document.write(new Date().getFullYear())</script></p>
     </footer>
 
