--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 			  Company Number 3-102-704857 in Costa Rica<br>
 			  2135 10th Avenue, San Jose city, San Jose, <br>
 			  Costa Rica<br><br>
-		<a href="mailto:walkbrookpropertiesltd@gmail.com?Subject=Question%20from%20website">walkbrookpropertiesltd@gmail.com</a>
+		Write to us: <a href="mailto:walkbrookpropertiesltd@gmail.com?Subject=Question%20from%20website">walkbrookpropertiesltd@gmail.com</a>
             </address>
           </div>
         </div>
