--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li><a class="page-scroll" href="#about">About us</a></li>
+	<li><a class="page-scroll" href="#second">Second hand</a></li>
+
           <li><a class="page-scroll" href="#gallery">Gallery of products</a></li>
           <li><a class="page-scroll" href="#contact">Contact</a></li>
         </ul>
@@ -127,7 +129,29 @@
         </div>
       </div>
     </section>
+	 
+	   <div class="container">
+    <section id="about">
+      <div class="container">
+        <div class="page-header">
+		  <h2 class="section-heading text-center">Second-hand clothes</h2><br>
+        </div>
+        <div class="row">
+          <p class="lead">
+Benefits
+Secondhand goods can benefit the purchaser as the price paid is lower than that of the same items bought new. If the reduction in price more than compensates for the possibly shorter remaining lifetime, lack of warranty, and so on, there is a net benefit.
 
+Selling unwanted goods secondhand instead of discarding them obviously benefits the seller.
+
+Recycling goods through the secondhand market reduces use of resources in manufacturing new goods, and diminishes waste which must be disposed of, both of which are significant environmental benefits. However, manufacturers who profit from sales of new goods lose corresponding sales. Scientific research shows that buying used goods reduces carbon footprint and CO2 emissions significantly compared to the complete product life cycle, because of less production, raw material sourcing and logistics. Often the relative carbon footprint of production, raw material sourcing and the supply chain is unknown. A scientific methodology has been made to analyze how much CO2 emissions are reduced when buying used goods like secondhand hardware versus new hardware.
+
+Quality secondhand goods can be more durable than equivalent new goods.
+          </p>
+        </div>
+      </div>
+    </section>
+		   
+		   
     <section id="gallery">
       <div class="container">
         <div class="page-header">
