--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <!-- Wrap the rest of the page in another container to center all the content. -->
 
   <div class="container">
-    <section id="about">
+    <section id="second">
       <div class="container">
         <div class="page-header">
 		  <h2 class="section-heading text-center">High-quality second-hand clothes</h2><br>
