--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <!-- Wrap the rest of the page in another container to center all the content. -->
 
   <div class="container">
-    <section id="second">
+    <section id="about">
       <div class="container">
         <div class="page-header">
 		  <h2 class="section-heading text-center">High-quality second-hand clothes</h2><br>
@@ -130,15 +130,14 @@
       </div>
     </section>
 	 
-	   <div class="container">
-    <section id="about">
+    <section id="second">
       <div class="container">
         <div class="page-header">
 		  <h2 class="section-heading text-center">Benefits of Second-hand</h2><br>
         </div>
         <div class="row">
           <p class="lead">
-Secondhand goods can benefit the purchaser as the price paid is lower than that of the same items bought new. If the reduction in price more than compensates for the possibly shorter remaining lifetime, lack of warranty, and so on, there is a net benefit.
+Secondhand goods can benefit the purchaser as the price paid is lower than that of the same items bought new. If the reduction in price more than compensates for the possibly shorter remaining lifetime, lack of warranty, and so on, there is a net benefit.<br>
 
 Selling unwanted goods secondhand instead of discarding them obviously benefits the seller.<br>
 
