--- a/ru/index.html
+++ b/ru/index.html
@@ -45,6 +45,7 @@
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li><a class="page-scroll" href="#about">О Нас</a></li>
+	  <li><a class="page-scroll" href="#second">Секонд хенд</a></li>
           <li><a class="page-scroll" href="#gallery">Галерея продукции</a></li>
           <li><a class="page-scroll" href="#contact">Контакты</a></li>
         </ul>
@@ -118,6 +119,25 @@
           <p class="lead">
             Наша молодая, динамично развивающаяся компания, работая вместе с партнерами, снабжает новую и второго использования одежду и обувь, что имеет хорошое качество, для наших клиентов. Мы приветствуем все компании, большие или малые из любой части мира, чтобы строить надежные партнерские отношения. Мы посвящаем себя искать клиентов  вокруг нашей планете и предлагать продукты   <b>Walkbrook properties Limitada</b>  для сообществ и компаний, где наша вторичная одежда может начать новую жизнь и сделать хорошее восприятие для людей. Если вы чувствуете, что мы можем помочь вашей организации, пожалуйста, не стесняйтесь обращаться к нам.
           </p>
+        </div>
+      </div>
+    </section>
+
+    <section id="second">
+      <div class="container">
+		  <div class="page-header">
+  		  	<h2 class="section-heading text-center">Происхождение товара секонд-хенд</h2><br>
+          </div>
+        <div class="row">
+          <p class="lead">
+В появление категории товаров секонд-хенд основными факторами можно считать:
+<ul>
+<li>В Англии 1943 года был организован первый секонд-хенд в качестве поддержки французскому сопротивлению.</li>
+<li>экономическое благополучие европейцев, которое позволяет не просто покупать одежду, а менять гардероб каждый сезон, при этом одежда не успевает износиться;<li>
+<li>культура, не позволяющая просто так выкинуть ещё хорошую вещь;<li>
+<li>спрос на вещи высокого качества среди людей, не готовых платить большие деньги за покупку в фирменных магазинах;<li>
+<li>низкое качество товаров по схожим ценам, произведенных в Китае, Индии и других странах.         <li>
+	</p>
         </div>
       </div>
     </section>
