--- a/ru/index.html
+++ b/ru/index.html
@@ -133,14 +133,21 @@
 В появление категории товаров секонд-хенд основными факторами можно считать:
 <ul>
 <li>В Англии 1943 года был организован первый секонд-хенд в качестве поддержки французскому сопротивлению.</li>
-<li>экономическое благополучие европейцев, которое позволяет не просто покупать одежду, а менять гардероб каждый сезон, при этом одежда не успевает износиться;<li>
-<li>культура, не позволяющая просто так выкинуть ещё хорошую вещь;<li>
-<li>спрос на вещи высокого качества среди людей, не готовых платить большие деньги за покупку в фирменных магазинах;<li>
-<li>низкое качество товаров по схожим ценам, произведенных в Китае, Индии и других странах.         <li>
+<li>экономическое благополучие европейцев, которое позволяет не просто покупать одежду, а менять гардероб каждый сезон, при этом одежда не успевает износиться;</li>
+<li>культура, не позволяющая просто так выкинуть ещё хорошую вещь;</li>
+<li>спрос на вещи высокого качества среди людей, не готовых платить большие деньги за покупку в фирменных магазинах;</li>
+<li>низкое качество товаров по схожим ценам, произведенных в Китае, Индии и других странах.         </li>
 	</p>
         </div>
       </div>
-    </section>
+	   <div class="row">
+          <p class="lead">
+		  <h3>Одежда секонд-хенд</h3>
+Одежда секонд-хенд — это вещи (одежда и обувь, постельное белье, игрушки и т. д.) бывшие в употреблении, уцененные или непроданные в установленный срок в фирменных магазинах. <br>
+		   Секонд-хендом может называться любая вещь, независимо от того, была она в употреблении или нет, отличительная черта товара секонд-хенд — отсутствие фирменной бирки и упаковки. Однако очень многие вещи из рук в руки продаются с наличием фирменных бирок и упаковок.
+   </p>
+        </div>
+		  </section>
 
     <section id="gallery">
       <div class="container">
