--- a/ru/index.html
+++ b/ru/index.html
@@ -141,8 +141,9 @@
         </div>
       </div>
 	   <div class="row">
+		   		  <h3>Одежда секонд-хенд</h3>
+
           <p class="lead">
-		  <h3>Одежда секонд-хенд</h3>
 Одежда секонд-хенд — это вещи (одежда и обувь, постельное белье, игрушки и т. д.) бывшие в употреблении, уцененные или непроданные в установленный срок в фирменных магазинах. <br>
 		   Секонд-хендом может называться любая вещь, независимо от того, была она в употреблении или нет, отличительная черта товара секонд-хенд — отсутствие фирменной бирки и упаковки. Однако очень многие вещи из рук в руки продаются с наличием фирменных бирок и упаковок.
    </p>
@@ -156,9 +157,11 @@
         </div>
         <div class="row">
           <p class="lead">
-            Мы можем предложить несортированную и отсортированную одежду, чтобы удовлетворить все потребности клиентов.</p>            <h3>Несортированная одежда</h3>
+            Мы можем предложить несортированную и отсортированную одежду, чтобы удовлетворить все потребности клиентов.</p> 
+		<h3>Несортированная одежда</h3>
             <p class="lead">Хороший ассортимент вторичной одежды из благотворительных учреждений, школьных и корпоративных коллекций предоставляется каждому клиенту  популярными стильными европейскими брендами.
-              Оригинальные нераспечатанные сумки, где коллекция содержит одежду для дам, детей, мужчин. Сумки могут также содержать обувь, сумки, аксессуары, постельное белье, игрушки и домашний текстиль.</p>
+              Оригинальные нераспечатанные сумки, где коллекция содержит одежду для дам, детей, мужчин. Сумки могут также содержать обувь, сумки, аксессуары, постельное белье, игрушки и домашний текстиль.
+		</p>
             <h3>Отсортированная одежда</h3>
             <p class="lead">Сортировка производится по одной из наших компаний-партнеров на очень высоком уровне.
                Мы можем предложить коллекции лета и зимой.
