--- a/ru/index.html
+++ b/ru/index.html
@@ -172,7 +172,7 @@
 
     <section id="contact">
         <div class="page-header">
-          <h1>Котакти</h1>
+          <h1>Контакти</h1>
         </div>
         <div class="row">
           <div class="col-md-6">
