--- a/ru/index.html
+++ b/ru/index.html
@@ -117,7 +117,9 @@
           </div>
         <div class="row">
           <p class="lead">
-            Наша молодая, динамично развивающаяся компания, работая вместе с партнерами, снабжает новую и второго использования одежду и обувь, что имеет хорошое качество, для наших клиентов. Мы приветствуем все компании, большие или малые из любой части мира, чтобы строить надежные партнерские отношения. Мы посвящаем себя искать клиентов  вокруг нашей планете и предлагать продукты   <b>Walkbrook properties Limitada</b>  для сообществ и компаний, где наша вторичная одежда может начать новую жизнь и сделать хорошее восприятие для людей. Если вы чувствуете, что мы можем помочь вашей организации, пожалуйста, не стесняйтесь обращаться к нам.
+            Наша молодая, динамично развивающаяся компания, работая вместе с партнерами, снабжает новую и второго использования одежду и обувь, что имеет хорошое качество, для наших клиентов.
+		  <br>Мы приветствуем все компании, большие или малые из любой части мира, чтобы строить надежные партнерские отношения. Мы посвящаем себя искать клиентов  вокруг нашей планете и предлагать продукты   <b>Walkbrook properties Limitada</b>  для сообществ и компаний, где наша вторичная одежда может начать новую жизнь и сделать хорошее восприятие для людей.
+		  <br>Если вы чувствуете, что мы можем помочь вашей организации, пожалуйста, не стесняйтесь обращаться к нам.
           </p>
         </div>
       </div>
@@ -131,7 +133,7 @@
         <div class="row">
           <p class="lead">
 В появление категории товаров секонд-хенд основными факторами можно считать:
-<ul>
+<ul style="font-size: 20px; font-weight: 300;">
 <li>В Англии 1943 года был организован первый секонд-хенд в качестве поддержки французскому сопротивлению.</li>
 <li>экономическое благополучие европейцев, которое позволяет не просто покупать одежду, а менять гардероб каждый сезон, при этом одежда не успевает износиться;</li>
 <li>культура, не позволяющая просто так выкинуть ещё хорошую вещь;</li>
