--- a/ru/index.html
+++ b/ru/index.html
@@ -149,6 +149,13 @@
 Одежда секонд-хенд — это вещи (одежда и обувь, постельное белье, игрушки и т. д.) бывшие в употреблении, уцененные или непроданные в установленный срок в фирменных магазинах. <br>
 		   Секонд-хендом может называться любая вещь, независимо от того, была она в употреблении или нет, отличительная черта товара секонд-хенд — отсутствие фирменной бирки и упаковки. Однако очень многие вещи из рук в руки продаются с наличием фирменных бирок и упаковок.
    </p>
+		   <h3>Секонд-хенд сегодня</h3>
+		   <p class="lead">
+Сегодня сохраняется огромное количество секонд-хендов с вещами низкого качества, без брендов и за минимальные цены. <br>
+	 Продажи происходят оптом или поштучно. Однако растет популярность онлайн секонд-хендов, где люди могут продавать и покупать действительно хорошую одежду, обувь, сумки и аксессуары лучших мировых брендов: от люксовых, таких как Chanel, Louis Vuitton или Balenciaga, до масс-маркета, такого как Zara, Topshop и H&M.<br>
+	С развитием концепции разумного потребления - всё больше людей предпочитают качество - количеству и стараются рациональнее подходить к вопросам потребления в одежде. Сегодня около 70% процентов гардероба каждого человека не используется - вместо того, чтобы вещь пылилась на полках, многие предпочитают давать одежде "вторую жизнь".
+		   </p>
+
         </div>
 		  </section>
 
