--- a/ru/index.html
+++ b/ru/index.html
@@ -157,6 +157,15 @@
 		   </p>
 
         </div>
+	    
+	    <div class="row">
+		    <h3>Экономика</h3>
+<p class="lead">Цены на секонд-хенд варьируются от 3 до 17 евро за килограмм, в зависимости от категории (Крем, Люкс, Экстра, 1 или 2 категории). <br>
+	Отданные на благотворительность предметы одежды впоследствии продаются собирающими их организациями (им нужны деньги, а не вещи) мелким компаниям из Африки, которые импортируют их во многие страны континента.<br>
+	Это привело в ряде их к падению объёма выпускаемой местной продукции, что негативно сказалось на занятости и ряде других микроэкономических показателей.
+		    </p>
+
+	    </div>
 		  </section>
 
     <section id="gallery">
