--- a/ru/index.html
+++ b/ru/index.html
@@ -194,7 +194,7 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-		<address>
+		<address style="font-size:20px;">
                 	<strong>Walkbrook properties Limitada</strong><br>
   			  Номер 3-102-704857 Коста Рика<br>
   			  2135 10th Avenue, San Jose city, San Jose, <br>
